Refactor buttons so that they are displayed inside a grid container and that they are mapped through from the state

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -59,9 +59,9 @@ html {
           width: 350px;
         }
       }
-      .button-row {
-        display: flex;
-        flex-direction: row;
+      .button-group {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
         justify-content: center;
         user-select: none;
         -webkit-user-select: none;
