--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,11 +1,7 @@
-$dark-gray: #333;
-$med-gray: rgba(255, 255, 255, 0.1);
-$white: #fff;
-$black: #000;
+$black: hsl(0, 0%, 0%);
 $calc-button-color: #00779e;
 $clear-button-color: #f3878c;
-$med-light-blue: #83bbc9;
-$light-blue: #cae2e8;
+$light-blue: hsl(192, 39%, 65%);
 $main-font: Helvetica, Arial, sans-serif;
 $monospace-font: "Oxygen Mono", monospace;
 $screen-font: "digital 7 italic", Helvetica, Arial, sans-serif;
