--- a/src/stylesheets/reset.scss
+++ b/src/stylesheets/reset.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import "variables";
 
 html,
 body,
@@ -18,7 +18,7 @@ a {
   border: 0;
   border-radius: 0;
   box-sizing: border-box;
-  color: $dark-gray;
+  color: change-color($black, $lightness: 20%);
   font-family: $main-font;
   font-size: 100%;
   font-weight: 400;
