--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -3,18 +3,18 @@
   src: url(../fonts/digital-7-italic.ttf);
 }
 
-@import 'variables';
-@import 'reset';
+@import "variables";
+@import "reset";
 
 *:focus {
   outline: none;
 }
 
 html {
-  background: $dark-gray;
-  background: linear-gradient(120deg, #262626, #4d4d4d) fixed;
+  background: change-color($black, $lightness: 20%);
+  background: linear-gradient(120deg, change-color($black, $lightness: 15%), change-color($black, $lightness: 30%)) fixed;
   h1 {
-    color: $white;
+    color: change-color($black, $lightness: 100%);
     font-family: $monospace-font;
     font-size: 1.5rem;
     letter-spacing: 12px;
@@ -24,7 +24,7 @@ html {
   main {
     padding-bottom: 50px;
     .calculator {
-      background: $med-gray;
+      background: rgba(change-color($black, $lightness: 100%), 0.1);
       border-radius: 6px;
       margin: 0 auto 30px;
       max-width: 320px;
@@ -33,8 +33,8 @@ html {
         max-width: 400px;
       }
       .screen {
-        background: $light-blue;
-        background: linear-gradient(to right, $med-light-blue, $light-blue) fixed;
+        background: change-color($light-blue, $lightness: 85%);
+        background: linear-gradient(to right, $light-blue, change-color($light-blue, $lightness: 85%)) fixed;
         border-radius: 4px;
         font-family: $screen-font;
         font-size: 1.8rem;
@@ -65,7 +65,7 @@ html {
           background: $calc-button-color;
           box-shadow: -1px 3px 2px $black;
           border-radius: 4px;
-          color: $white;
+          color: change-color($black, $lightness: 100%);
           font-size: 1rem;
           height: 45px;
           margin: 5px;
@@ -85,23 +85,23 @@ html {
         .number:hover,
         .number:active,
         .number:focus {
-          background: $white;
-          color: $dark-gray;
+          background: change-color($black, $lightness: 100%);
+          color: change-color($black, $lightness: 20%);
         }
         .clear,
         .clear:hover,
         .clear:active,
         .clear:focus {
           background: $clear-button-color;
-          color: $dark-gray;
+          color: change-color($black, $lightness: 20%);
         }
       }
     }
   }
   footer {
-    background: $med-gray;
+    background: rgba(change-color($black, $lightness: 100%), 0.1);
     bottom: 0;
-    color: $white;
+    color: change-color($black, $lightness: 100%);
     font-size: 0.8rem;
     left: 0;
     letter-spacing: 2px;
@@ -114,7 +114,7 @@ html {
     a:hover,
     a:active,
     a:focus {
-      color: $med-light-blue;
+      color: $light-blue;
     }
   }
 }
