Use Normalize.css instead of reset

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -2,6 +2,5 @@ $black: hsl(0, 0%, 0%);
 $calc-button-color: #00779e;
 $clear-button-color: #f3878c;
 $light-blue: hsl(192, 39%, 65%);
-$main-font: Helvetica, Arial, sans-serif;
 $monospace-font: "Oxygen Mono", monospace;
-$screen-font: "digital 7 italic", Helvetica, Arial, sans-serif;
+$screen-font: "digital 7 italic", sans-serif;
